samba/samba-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smb-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: haiqv.sunbean.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: samba-service
                port:
                  name: smb
